--- a/digital-clock.html
+++ b/digital-clock.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <title>Digital Clock</title>
-    <link rel="stylesheet" href="file1.css" />
+    <link rel="stylesheet" href="digital-clock.css" />
 </head>
 <body>
     <h2>Digital Clock</h2>
