--- a/digital-clock.html
+++ b/digital-clock.html
@@ -26,6 +26,6 @@
         </div>
 
     </div>
-    <script src="file1.js"></script>
+    <script src="digital-clock.js"></script>
 </body>
 </html>
