--- a/multiplication-app.html
+++ b/multiplication-app.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="file1.css">
+    <link rel="stylesheet" href="multiplication-app.css">
 </head>
 <body>
     <form class="form" id="form">
@@ -13,6 +13,6 @@
         <input type="text" class="input" id="input" placeholder="Enter your answer..." autofocus autocomplete="off">
         <button type="submit" class="btn">SUBMIT</button>
     </form>
-    <script src="file1.js"></script>
+    <script src="multiplication-app.js"></script>
 </body>
 </html>
