--- a/randomphotos/randomphotos.html
+++ b/randomphotos/randomphotos.html
@@ -1,1 +1,26 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Random Photos</title>
+    <link rel="stylesheet" href="randomphotos.css">
+</head>
+<body>
+    <div class="image-container">
+        <img src="https://picsum.photos/400?random=1">
+        <img src="https://picsum.photos/400?random=2">
+        <img src="https://picsum.photos/400?random=3">
+        <img src="https://picsum.photos/400?random=4">
+        <img src="https://picsum.photos/400?random=6">
+        <img src="https://picsum.photos/400?random=7">
+        <img src="https://picsum.photos/400?random=8">
+        <img src="https://picsum.photos/400?random=9">
+        <img src="https://picsum.photos/400?random=10">
+        <img src="https://picsum.photos/400?random=11">
+        <img src="https://picsum.photos/400?random=12">        
+    </div>
+    <button class="btn">Load More</button>
+    <script src="randomphotos.js"></script>
+</body>
+</html>
