--- a/tabselector/tabselection.html
+++ b/tabselector/tabselection.html
@@ -1,1 +1,38 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Tabs Selection</title>
+    <link rel="stylesheet" href="tabsselection.css">
+</head>
+<body>
+    <div class="section-center">
+        <div class="image">
+            <img src="https://static.vecteezy.com/system/resources/thumbnails/026/365/937/small_2x/beautiful-blurred-green-nature-background-ai-generated-photo.jpg" alt="image">
+        </div>
+        <div class="tabs">
+            <div class="btn-container">
+                <button class="button live" data-id="step1">Step 1</button>
+                <button class="button" data-id="step2">Step 2</button>
+                <button class="button" data-id="step3">Step 3</button>
+            </div>
+            <div class="tabs-content">
+                <div class="content live" id="step1">
+                    <h3>Step 1</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde, quasi voluptatem magnam fugiat amet veniam. Autem facere in ducimus culpa! Nostrum accusamus numquam delectus, sed eaque, inventore aliquam non, voluptatum vero facere esse veritatis. Delectus dolores necessitatibus doloremque optio odit, veritatis tempora qui consequuntur, iste, ipsum a vero quas nostrum minima at repellendus voluptatem rerum blanditiis dolore alias officia. Odio molestias qui perferendis tempora nostrum veritatis temporibus aliquam quisquam voluptates! Repellat delectus fugiat excepturi omnis ipsam deserunt esse rerum laborum odio porro! Illum mollitia consequatur perferendis debitis. Nihil enim rerum unde pariatur dignissimos debitis dicta perspiciatis nesciunt, id cum. Commodi? </p>
+                </div>
+                <div class="content" id="step2">
+                    <h3>Step 2</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde, quasi voluptatem magnam fugiat amet veniam. Autem facere in ducimus culpa! Nostrum accusamus numquam delectus, sed eaque, inventore aliquam non, voluptatum vero facere esse veritatis. Delectus dolores necessitatibus doloremque optio odit, veritatis tempora qui consequuntur, iste, ipsum a vero quas nostrum minima at repellendus voluptatem rerum blanditiis dolore alias officia. Odio molestias qui perferendis tempora nostrum veritatis temporibus aliquam quisquam voluptates! Repellat delectus fugiat excepturi omnis ipsam deserunt esse rerum laborum odio porro! Illum mollitia consequatur perferendis debitis. Nihil enim rerum unde pariatur dignissimos debitis dicta perspiciatis nesciunt, id cum. Commodi? </p>
+                </div>
+                <div class="content" id="step3">
+                    <h3>Step 3</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde, quasi voluptatem magnam fugiat amet veniam. Autem facere in ducimus culpa! Nostrum accusamus numquam delectus, sed eaque, inventore aliquam non, voluptatum vero facere esse veritatis. Delectus dolores necessitatibus doloremque optio odit, veritatis tempora qui consequuntur, iste, ipsum a vero quas nostrum minima at repellendus voluptatem rerum blanditiis dolore alias officia. Odio molestias qui perferendis tempora nostrum veritatis temporibus aliquam quisquam voluptates! Repellat delectus fugiat excepturi omnis ipsam deserunt esse rerum laborum odio porro! Illum mollitia consequatur perferendis debitis. Nihil enim rerum unde pariatur dignissimos debitis dicta perspiciatis nesciunt, id cum. Commodi? </p>
+                </div>
+            </div>
+        </div>
+    </div>
+</body>
+<script src="tabsselection.js"></script>
+</html>
