--- a/textanimation/textanimation.html
+++ b/textanimation/textanimation.html
@@ -1,1 +1,16 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Auto Text Effect Animation</title>
+    <link rel="stylesheet" href="textanimation.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Playwrite+US+Modern:wght@100..400&display=swap" rel="stylesheet">
+</head>
+<body>
+    <div class="container"></div>
+</body>
+<script src="textanimation.js"></script>
+</html>
