--- a/video-trailer-popup/video_popup.html
+++ b/video-trailer-popup/video_popup.html
@@ -28,7 +28,7 @@
         <button class="btn">Watch Now</button>
     </div>
     <div class="trailer-container active">
-        <video src="trailer.mp4" controls></video>
+        <video src="trailer2.mp4" controls></video>
         <i class="fa-regular fa-circle-xmark fa-2x close-icon"></i>
     </div>
 </body>
